# CTF

AtomSkills2023/: README.md
AtomSkills2023/crypto1/: README.md
AtomSkills2023/crypto2/: README.md  file.txt
AtomSkills2023/fastapi-reverse/: Dockerfile  README.md  app.db  main.py  pyproject.toml
AtomSkills2023/fastapi-reverse/app/: database.py  main.py
AtomSkills2023/fastapi-reverse/app/models/: commit.py  project.py  user.py
AtomSkills2023/fastapi-reverse/app/routers/: admin.py  project.py
AtomSkills2023/fastapi-reverse/app/schemas/: commit.py  project.py
AtomSkills2023/fastapi-reverse/app/security/: basic_auth.py
AtomSkills2023/fastapi-reverse/migrations/versions/: 98d8c38e2dd4_init.py  baf9ee844d66_init.py
AtomSkills2023/ppc1-ppc_matreshka_easy/: pyproject.toml
AtomSkills2023/ppc2 (ppc_matreshka_medium)/: pyproject.toml
AtomSkills2023/ppc2-ppc_matreshka_medium/: README.md  main.py
AtomSkills2023/ppc3 (ppc_qr_captcha)/: pyproject.toml
AtomSkills2023/ppc3-ppc_qr_captcha/: docker-compose.yml
AtomSkills2023/ppc_matreshka_easy/: docker-compose.yml  main.py  pyproject.toml
AtomSkills2023/ppc_matreshka_easy/models/: doll.py
AtomSkills2023/ppc_matreshka_medium/: docker-compose.yml  main.py  pyproject.toml
AtomSkills2023/ppc_qr_captcha/: Dockerfile  README.md  main.py
AtomSkills2023/rev1/: flag.txt  source.go
AtomSkills2023/rev2/: flag.txt  source.go
AtomSkills2023/rev4 (fastapi-reverse)/: README.md
AtomSkills2023/rev4-fastapi-reverse/: README.md
AtomSkills2023/web-jwt/: go.mod  main.go
AtomSkills2023/web-race/: go.mod  main.go  (+1 more)
(+30 files in other folders)
