[tool.poetry]
name = "fastapi-reverse"
version = "0.1.0"
description = ""
authors = ["anonymous <anonymous@anonymous.anon>"]
readme = "README.md"
packages = [{include = "fastapi_reverse"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
