[tool.poetry]
name = "fastapi-reverse"
version = "0.1.0"
description = ""
authors = ["anonymous <anonymous@anonymous.anon>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"
sqlmodel = "^0.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
